--- a/.gitignore
+++ b/.gitignore
@@ -211,3 +211,4 @@ TobiiAPI/TobiiEyeXSdk-Cpp-1.7.489/Developer's Guide C & Cpp.pdf
 TobiiAPI/TobiiEyeXSdk-Cpp-1.7.489/Getting Started.pdf
 TobiiAPI/TobiiEyeXSdk-Cpp-1.7.489/Readme.txt
 oalinst.zip
+Mandala/Mandala.VC.db
