Windows API for Audio and Tobii linked libraries

--- a/.gitignore
+++ b/.gitignore
@@ -212,3 +212,4 @@ TobiiAPI/TobiiEyeXSdk-Cpp-1.7.489/Getting Started.pdf
 TobiiAPI/TobiiEyeXSdk-Cpp-1.7.489/Readme.txt
 oalinst.zip
 Mandala/Mandala.VC.db
+Mandala/Debug/testAudio.wav
