Game Data Strutures

--- a/Mandala/Mandala/Mandala.vcxproj
+++ b/Mandala/Mandala/Mandala.vcxproj
@@ -119,6 +119,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AudioMaster.cpp" />
+    <ClCompile Include="GameComponent.cpp" />
+    <ClCompile Include="GameEntity.cpp" />
+    <ClCompile Include="GameScene.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -128,8 +131,11 @@
   <ItemGroup>
     <ClInclude Include="AudioHeader.h" />
     <ClInclude Include="AudioMaster.h" />
+    <ClInclude Include="GameDataStructures.h" />
+    <ClInclude Include="GameComponent.h" />
+    <ClInclude Include="GameEntity.h" />
+    <ClInclude Include="GameScene.h" />
     <ClInclude Include="GraphicsHeader.h" />
-    <ClInclude Include="resource.h" />
     <ClInclude Include="SystemHeader.h" />
     <ClInclude Include="ThreadingHeader.h" />
   </ItemGroup>
