--- a/Mandala/Mandala/Mandala.vcxproj.filters
+++ b/Mandala/Mandala/Mandala.vcxproj.filters
@@ -16,6 +16,9 @@
     <Filter Include="Audio">
       <UniqueIdentifier>{8f7e93f2-7953-4679-acdb-e0beceda4d8c}</UniqueIdentifier>
     </Filter>
+    <Filter Include="AbstractDefinitions">
+      <UniqueIdentifier>{1e3db918-f470-4643-b5b3-88bff5f722cd}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -23,6 +26,15 @@
     </ClCompile>
     <ClCompile Include="AudioMaster.cpp">
       <Filter>Audio</Filter>
+    </ClCompile>
+    <ClCompile Include="GameComponent.cpp">
+      <Filter>AbstractDefinitions</Filter>
+    </ClCompile>
+    <ClCompile Include="GameEntity.cpp">
+      <Filter>AbstractDefinitions</Filter>
+    </ClCompile>
+    <ClCompile Include="GameScene.cpp">
+      <Filter>AbstractDefinitions</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -42,11 +54,20 @@
     <ClInclude Include="ThreadingHeader.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
-    <ClInclude Include="resource.h">
-      <Filter>Archivos de encabezado</Filter>
-    </ClInclude>
     <ClInclude Include="AudioMaster.h">
       <Filter>Audio</Filter>
+    </ClInclude>
+    <ClInclude Include="GameComponent.h">
+      <Filter>AbstractDefinitions</Filter>
+    </ClInclude>
+    <ClInclude Include="GameEntity.h">
+      <Filter>AbstractDefinitions</Filter>
+    </ClInclude>
+    <ClInclude Include="GameScene.h">
+      <Filter>AbstractDefinitions</Filter>
+    </ClInclude>
+    <ClInclude Include="GameDataStructures.h">
+      <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
