--- a/Mandala/Mandala/Mandala.vcxproj.filters
+++ b/Mandala/Mandala/Mandala.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClInclude Include="GameDataStructures.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Archivos de recursos</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Mandala.rc">
