--- a/.gitignore
+++ b/.gitignore
@@ -463,3 +463,4 @@ desktop.ini
 TobiiAPI/TobiiEyeXSdk-Cpp-1.7.489/samples/MinimalGazeDataStream/MinimalGazeDataStream.c
 TobiiAPI/TobiiEyeXSdk-Cpp-1.7.489/samples/MinimalGazeDataStream/MinimalGazeDataStream.vcxproj
 TobiiAPI/TobiiEyeXSdk-Cpp-1.7.489/samples/MinimalGazeDataStream/MinimalGazeDataStream.vcxproj.filters
+Mandala/Debug/testAudio2.wav
