--- a/Mandala/Mandala/Mandala.vcxproj
+++ b/Mandala/Mandala/Mandala.vcxproj
@@ -124,6 +124,8 @@
     <ClCompile Include="GameEntity.cpp" />
     <ClCompile Include="GameScene.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MusicComponent.cpp" />
+    <ClCompile Include="SoundEffectComponent.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="freeglut.dll" />
@@ -138,7 +140,9 @@
     <ClInclude Include="GameEntity.h" />
     <ClInclude Include="GameScene.h" />
     <ClInclude Include="GraphicsHeader.h" />
+    <ClInclude Include="MusicComponent.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="SoundEffectComponent.h" />
     <ClInclude Include="SystemHeader.h" />
     <ClInclude Include="ThreadingHeader.h" />
     <ClInclude Include="Transform.h" />
