--- a/Mandala/Mandala/Mandala.vcxproj.filters
+++ b/Mandala/Mandala/Mandala.vcxproj.filters
@@ -42,6 +42,12 @@
     <ClCompile Include="easylog\easyLog.cpp">
       <Filter>Logging</Filter>
     </ClCompile>
+    <ClCompile Include="SoundEffectComponent.cpp">
+      <Filter>Audio</Filter>
+    </ClCompile>
+    <ClCompile Include="MusicComponent.cpp">
+      <Filter>Audio</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="freeglut.dll" />
@@ -83,6 +89,12 @@
     </ClInclude>
     <ClInclude Include="Transform.h">
       <Filter>AbstractDefinitions</Filter>
+    </ClInclude>
+    <ClInclude Include="SoundEffectComponent.h">
+      <Filter>Audio</Filter>
+    </ClInclude>
+    <ClInclude Include="MusicComponent.h">
+      <Filter>Audio</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
