Tobii Device second aproach

--- a/.gitignore
+++ b/.gitignore
@@ -464,3 +464,6 @@ TobiiAPI/TobiiEyeXSdk-Cpp-1.7.489/samples/MinimalGazeDataStream/MinimalGazeDataS
 TobiiAPI/TobiiEyeXSdk-Cpp-1.7.489/samples/MinimalGazeDataStream/MinimalGazeDataStream.vcxproj
 TobiiAPI/TobiiEyeXSdk-Cpp-1.7.489/samples/MinimalGazeDataStream/MinimalGazeDataStream.vcxproj.filters
 Mandala/Debug/testAudio2.wav
+TobiiAPI/TobiiEyeXSdk-Cpp-1.7.489/samples/
+TobiiEyeXSdk-Cpp-1.8.498/Getting Started.pdf
+TobiiEyeXSdk-Cpp-1.8.498/
