--- a/Mandala/Mandala/Mandala.vcxproj
+++ b/Mandala/Mandala/Mandala.vcxproj
@@ -142,6 +142,7 @@
     <ClInclude Include="GraphicsHeader.h" />
     <ClInclude Include="include\easylog\easyLog.h" />
     <ClInclude Include="MusicComponent.h" />
+    <ClInclude Include="Preload.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="SoundEffectComponent.h" />
     <ClInclude Include="SystemHeader.h" />
