Tobii Accessing - untested

--- a/.gitignore
+++ b/.gitignore
@@ -467,3 +467,4 @@ Mandala/Debug/testAudio2.wav
 TobiiAPI/TobiiEyeXSdk-Cpp-1.7.489/samples/
 TobiiEyeXSdk-Cpp-1.8.498/Getting Started.pdf
 TobiiEyeXSdk-Cpp-1.8.498/
+*.wav
