--- a/.gitignore
+++ b/.gitignore
@@ -468,3 +468,4 @@ TobiiAPI/TobiiEyeXSdk-Cpp-1.7.489/samples/
 TobiiEyeXSdk-Cpp-1.8.498/Getting Started.pdf
 TobiiEyeXSdk-Cpp-1.8.498/
 *.wav
+Mandala/Mandala.VC.VC.opendb
